--- a/docs/release_guide.pod
+++ b/docs/release_guide.pod
@@ -195,6 +195,13 @@ Make sure any locally modified files have been pushed back to github.
 
 =item 9.
 
+Tag the release by its release month ("MMMM.YY") and its code name.
+
+  $ git tag -a -m"tag release #nn" MMMM.YY    # e.g., 2010.02
+  $ git tag -a -m"tag release #nn" CODENAME   # e.g., "Bratislava"
+
+=item 10.
+
 Create a tarball by entering C<make release VERSION=YYYY.MM>,
 where YYYY.MM is the month for which the release is being made.
 This will create a tarball file named <rakudo-YYYY.MM.tgz>.
@@ -203,26 +210,29 @@ B<Caution>: this steps removes your C<t/spec> directory and all files
 contained therein, and replaces it by a fresh svn export. So please make a
 backup if you have any important data in there.
 
-=item 10.
+=item 11.
 
 Unpack the tar file into another area, and test that it
 builds and runs properly.  If there are any problems,
-fix them and go back to step 7.
+delete the tags with
 
-=item 11.
+  $ git tag -d MMMM.YY
+  $ git tag -d CODENAME
 
-Tag the release by its release month ("MMMM.YY") and its code name.
-
-  $ git tag -a -m"tag release #nn" MMMM.YY    # e.g., 2010.02
-  $ git tag -a -m"tag release #nn" CODENAME   # e.g., "Bratislava"
-  $ git push --tags
+fix the problems, and go back to step 7.
 
 =item 12.
+
+Publish the tags with
+
+  $ git push --tags
+
+=item 13.
 
 Upload the release tarball to github's download area at
 L<http://github.com/rakudo/rakudo/downloads>.
 
-=item 13.
+=item 14.
 
 To avoid public confusion with Rakudo Star releases that will 
 follow a few days after each compiler release, we now publish 
@@ -231,13 +241,9 @@ compiler release announcements ONLY to perl6-compiler@perl.org.
 once they are known, or we may begin publishing a single
 announcement for both.)
 
-=item 14.
-
-Update the Wikipedia entry at L<http://en.wikipedia.org/wiki/Rakudo>.
-
 =item 15.
 
-Promote the release anywhere else you think appropriate.
+Update the Wikipedia entry at L<http://en.wikipedia.org/wiki/Rakudo>.
 
 =item 16.
 
